# Watermark

./: CONFIG.md  FAQ.md  README.md
backend/: app.py  localhost+2-key.pem  localhost+2.pem  requirements.txt
c2pa/: README.md
frontend/: package-lock.json  package.json
frontend/public/: c2pa.worker.js
frontend/src/app/: globals.css  page.js
frontend/src/components/: C2paDisplay.js  CameraScanner.js
js/: README.md  tm_watermark.js
python/: CONFIG.md  README.md  test.py
rust/: .gitignore  Cargo.toml  LICENSE  README.md
rust/benches/: encode.rs  encode.sh  load.rs  load.sh
rust/crates/trustmark-cli/: Cargo.toml  README.md
rust/crates/trustmark-cli/src/: main.rs
rust/crates/xtask/: Cargo.toml
rust/crates/xtask/src/: main.rs
rust/src/: bits.rs  image_processing.rs  lib.rs  model.rs
rust/src/bits/: bch.rs
